# state-machine-quadrotor

./: CMakeLists.txt  README.md  package.xml
action/: tracking.action
launch/: actions_startup.launch
msg/: trackingFeedback.msg  trackingGoal.msg
script/: drone.py
src/: traj_plan_track_action_server.cpp
